--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
+    "sass": "^1.77.7",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
